Fixed z-index
Header didn't have it!

--- a/views/sass/partials/_header.scss
+++ b/views/sass/partials/_header.scss
@@ -9,6 +9,7 @@ header {
     margin-left: auto;
     margin-right: auto;
     position: fixed;
+    z-index: 10;
     top: 0;
     padding: 5px 10px;
     height: 70px;
@@ -64,6 +65,7 @@ header {
                     border: 0px;
                     display: block;
                     padding: 17px 20px;
+                    font-family: inherit;
                     //margin: 0px 5px;
                     color: white;
                     background: $color1;
